policy gradient: minor fixes

--- a/policy_gradient/policy_gradient.ipynb
+++ b/policy_gradient/policy_gradient.ipynb
@@ -91,7 +91,7 @@
    "id": "bd1befbe",
    "metadata": {},
    "source": [
-    "In this MDP, a state is a vector of 4 real numbers. We call this a *continuous* state space.\n",
+    "In this MDP, a state is a vector of 4 real numbers (cart position, cart velocity, pole angle, pole angular velocity). We call this a *continuous* state space.\n",
     "\n",
     "Let's take note of the state dimension:"
    ]
@@ -149,7 +149,7 @@
    "id": "518c6575",
    "metadata": {},
    "source": [
-    "The **starting-state distribution** is given by the `reset` method. It returns the initial state:"
+    "The **starting-state distribution** is given by the `reset` method. It returns the initial state, which is a random vector not too far from zero, corresponding to the cart being almost in the center, the pole being almost vertical, and both almost still."
    ]
   },
   {
@@ -473,7 +473,19 @@
    "id": "7a13011f",
    "metadata": {},
    "source": [
-    "For advanced array reading, see slicing in numpy https://www.w3schools.com/python/numpy/numpy_array_slicing.asp"
+    "For advanced array reading, see slicing in numpy https://www.w3schools.com/python/numpy/numpy_array_slicing.asp.\n",
+    "\n",
+    "For example we can reverse an array as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c11aca55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v[::-1]"
    ]
   },
   {
@@ -545,16 +557,6 @@
    "outputs": [],
    "source": [
     "A @ v #matrix multiplication"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51a90044",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A.T #matrix transpose"
    ]
   },
   {
@@ -837,21 +839,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03e926d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(performances)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1ce9d35b",
    "metadata": {},
    "source": [
-    "You should notice a slight increase in the performance...but what behavior has the agent actually learned? It is a good practice to render the behavior of the learned policy. You should compare it with the random policy that was defined at the beginning of the tutorial."
+    "You should notice a slight increase in the performance...but what behavior has the agent actually learned? It is a good practice to render the behavior of the learned policy. You should compare it with the random policy that was defined at the beginning of the tutorial.\n",
+    "\n",
+    "*Random policy:*"
    ]
   },
   {
@@ -864,6 +858,14 @@
     "%%capture\n",
     "env = gym.make(\"CartPole-v1\") #create a new environment to avoid pygame display errors\n",
     "run_interaction(env, random_agent, n_steps=200, render=True, seed=0); #display behavior of random policy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9dd9dea",
+   "metadata": {},
+   "source": [
+    "*Learned policy:*"
    ]
   },
   {
@@ -938,7 +940,7 @@
     "        self.nn_init, self.model = stax.serial(\n",
     "            stax.Dense(hidden), #state as input\n",
     "            stax.Tanh, #tanh activations\n",
-    "            stax.Dense(n_actions)) #one output per action (the unnormalized log-probabilities)        )\n",
+    "            stax.Dense(n_actions)) #one output per action (the unnormalized log-probabilities)\n",
     "        super().__init__(state_dim, n_actions)\n",
     "        \n",
     "    def reset(self, seed=0):\n",
