--- a/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Student.ipynb
+++ b/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Student.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3833d796",
    "metadata": {},
    "outputs": [],
@@ -73,6 +73,7 @@
     "import random\n",
     "\n",
     "#Set the seed for reproducibility\n",
+    "np.random.seed(7)\n",
     "random.seed(7)"
    ]
   },
@@ -439,16 +440,21 @@
     "        Initialize a zero matrix of dimension state_space * state_space * action_space and call it self.Qtable!\n",
     "        '''\n",
     "        \n",
+    "        \n",
+    "        \n",
     "        #WRITE YOUR CODE HERE!\n",
     "\n",
-    "    def train(self, simulations, learning_rate, epsilon = 1, adapting_learning_rate = False):\n",
+    "    def train(self, simulations, learning_rate, epsilon = 0.05, epsilon_decay = 1000, adaptive_epsilon = False,\n",
+    "              adapting_learning_rate = False):\n",
     "        \n",
     "        '''\n",
     "        Params:\n",
     "        \n",
     "        simulations = number of episodes of a game to run\n",
-    "        learning_rate = learning rate for the update eqau\n",
+    "        learning_rate = learning rate for the update eqaution\n",
     "        epsilon = epsilon value for epsilon-greedy algorithm\n",
+    "        epsilon_decay = number of full episodes (games) over which the epsilon value will decay to its final value\n",
+    "        adaptive_epsilon = boolean that indicates if the epsilon rate will decay over time or not\n",
     "        adapting_learning_rate = boolean that indicates if the learning rate should be adaptive or not\n",
     "        \n",
     "        '''\n",
@@ -458,15 +464,17 @@
     "        self.rewards = []\n",
     "        self.average_rewards = []\n",
     "        \n",
-    "        #Call the Q table function to create a randomly initialized Q table\n",
+    "        #Call the Q table function to create an initialized Q table\n",
     "        self.create_Q_table()\n",
     "        \n",
-    "        #Set epsilon rate and learning rate\n",
+    "        #Set epsilon rate, epsilon decay and learning rate\n",
     "        self.epsilon = epsilon\n",
+    "        self.epsilon_decay = epsilon_decay\n",
     "        self.learning_rate = learning_rate\n",
     "        \n",
-    "        #Set minimum epsilon, so here we want a minimum exploration rate of 0.05\n",
-    "        self.epsilon_minimum = 0.05\n",
+    "        #Set start epsilon, so here we want a starting exploration rate of 1\n",
+    "        self.epsilon_start = 1\n",
+    "        self.epsilon_end = 0.05\n",
     "        \n",
     "        #If we choose adaptive learning rate, we start with a value of 1 and decay it over time!\n",
     "        if adapting_learning_rate:\n",
@@ -489,6 +497,14 @@
     "            #Set the rewards to 0\n",
     "            total_rewards = 0\n",
     "            \n",
+    "            #If adaptive epsilon rate\n",
+    "            if adaptive_epsilon:\n",
+    "                self.epsilon = np.interp(i, [0, self.epsilon_decay], [self.epsilon_start, self.epsilon_end])\n",
+    "                \n",
+    "                #Logging just to check it decays as we want it to do, we just print out the first three statements\n",
+    "                if i % 500 == 0 and i <= 1500:\n",
+    "                    print(f\"The current epsilon rate is {self.epsilon}\")\n",
+    "                    \n",
     "            #Loop until an episode has terminated\n",
     "            while not done:\n",
     "                \n",
@@ -531,10 +547,6 @@
     "                total_rewards += reward\n",
     "                state = next_state\n",
     "                \n",
-    "            #Decay epsilon, here we decay both the epsilon and learning rate with the number of simulations\n",
-    "            delta = (self.epsilon - self.epsilon_minimum)/(i+1)\n",
-    "            self.epsilon -= delta\n",
-    "            \n",
     "            if adapting_learning_rate:\n",
     "                self.learning_rate = self.learning_rate/np.sqrt(i+1)\n",
     "            \n",
