--- a/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Student.ipynb
+++ b/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Student.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3833d796",
    "metadata": {},
    "outputs": [],
@@ -121,10 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c1a56681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[42]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env_name = 'MountainCar-v0'\n",
     "env = gym.make(env_name)\n",
@@ -151,10 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1b55f945",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The observation space is  Box([-1.2  -0.07], [0.6  0.07], (2,), float32)\n",
+      "The action space is  Discrete(3)\n"
+     ]
+    }
+   ],
    "source": [
     "print('The observation space is ', env.observation_space)\n",
     "print('The action space is ', env.action_space)"
@@ -185,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5c10ad2b",
    "metadata": {},
    "outputs": [],
@@ -196,10 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "db62df18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-1.2 , -0.07], dtype=float32), array([0.6 , 0.07], dtype=float32))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "low, high"
    ]
@@ -222,10 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6b9c24b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.4641341,  0.       ], dtype=float32), {})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env.reset()"
    ]
@@ -240,10 +282,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d07d0087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jacobk/PycharmProjects/practical_sessions_RL/venv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.46557772, -0.00144362], dtype=float32), -1.0, False, False, {})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env.step(env.action_space.sample())"
    ]
@@ -266,21 +327,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1ccf19f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n"
+     ]
+    }
+   ],
    "source": [
-    "env = gym.make(env_name)\n",
-    "env.reset()\n",
+    "eval_env = gym.make(env_name, render_mode='human')\n",
+    "eval_env.reset()\n",
     "for _ in range(500):\n",
     "    if _ % 100 == 0:\n",
     "        print(_)\n",
-    "    action = env.step(env.action_space.sample())\n",
-    "    env.render()\n",
+    "    next_state, reward, terminated, truncated, info = eval_env.step(env.action_space.sample())\n",
     "\n",
     "# This will stop the environment after\n",
-    "env.close()"
+    "eval_env.close()"
    ]
   },
   {
@@ -401,7 +473,7 @@
     "        Please create the bins for the velocity feature in the same manner and call this variable self.bin_velocity!\n",
     "        '''\n",
     "        \n",
-    "        #WRITE YOUR CODE HERE!\n",
+    "        #####  WRITE YOUR CODE HERE! ######\n",
     "        \n",
     "   \n",
     "    \n",
@@ -442,7 +514,7 @@
     "        \n",
     "        \n",
     "        \n",
-    "        #WRITE YOUR CODE HERE!\n",
+    "        ##### WRITE YOUR CODE HERE! #####\n",
     "\n",
     "    def train(self, simulations, learning_rate, epsilon = 0.05, epsilon_decay = 1000, adaptive_epsilon = False,\n",
     "              adapting_learning_rate = False):\n",
@@ -485,7 +557,7 @@
     "            if i % 5000 == 0:\n",
     "                print(f'Please wait, the algorithm is learning! The current simulation is {i}')\n",
     "            #Initialize the state\n",
-    "            state = self.env.reset()\n",
+    "            state = self.env.reset()[0] # reset returns a dict, need to take the 0th entry\n",
     "        \n",
     "            #Set a variable that flags if an episode has terminated\n",
     "            done = False\n",
@@ -519,7 +591,7 @@
     "            \n",
     "                #Pick random action\n",
     "                \n",
-    "                #WRITE YOUR CODE HERE!\n",
+    "                ###### WRITE YOUR CODE HERE! #####\n",
     "                if ...\n",
     "                    \n",
     "                #Pick a greedy action\n",
@@ -529,7 +601,8 @@
     "                    \n",
     "                #Now sample the next_state, reward, done and info from the environment\n",
     "                \n",
-    "                next_state, reward, done, info = self.env.step(action)\n",
+    "                next_state, reward, terminated, truncated, info = self.env.step(action) # step returns 5 outputs\n",
+    "                done = terminated or truncated\n",
     "                \n",
     "                #Now discretize the next_state\n",
     "                next_state = self.discretize_state(next_state)\n",
@@ -538,7 +611,12 @@
     "                Q_target = (reward + self.discount_rate*np.max(self.Qtable[next_state[0], next_state[1]]))\n",
     "                \n",
     "                #Calculate the Temporal difference error (delta)\n",
-    "                delta = self.learning_rate * (Q_target - self.Qtable[state[0], state[1], action])\n",
+    "                '''\n",
+    "                ToDo: Calculate the Temporal difference error (delta)\n",
+    "                Tip: Make use of slide 17 from the Q-learning slides on Canvas\n",
+    "                '''\n",
+    "                ###### WRITE YOUR CODE HERE! #####\n",
+    "                delta = ...\n",
     "                \n",
     "                #Update the Q-value\n",
     "                self.Qtable[state[0], state[1], action] = self.Qtable[state[0], state[1], action] + delta\n",
@@ -571,21 +649,18 @@
     "        plt.ylabel('Average reward', fontsize = 10)\n",
     "            \n",
     "    def play_game(self):\n",
-    "        #Get the optimized strategy:\n",
-    "        done = False\n",
-    "        #Start the game\n",
-    "        state = self.env.reset()\n",
+    "        # Make eval env which renders when taking a step\n",
+    "        eval_env = gym.make(env_name, render_mode='human')\n",
+    "        state = eval_env.reset()[0]\n",
+    "        done=False\n",
+    "        # Run the environment for 1 episode\n",
     "        while not done:\n",
     "            state = self.discretize_state(state)\n",
-    "            #Pick the best acction from the saved Qtable\n",
     "            action = np.argmax(self.Qtable[state[0],state[1],:])\n",
-    "            next_state, reward, done, info = self.env.step(action)\n",
+    "            next_state, reward, terminated, truncated, info = eval_env.step(action)\n",
+    "            done = terminated or truncated\n",
     "            state = next_state\n",
-    "            self.env.render()\n",
-    "            #Pause to make it easier to watch\n",
-    "            time.sleep(0.05)\n",
-    "        #Close the pop-up window\n",
-    "        self.env.close()"
+    "        eval_env.close()"
    ]
   },
   {
@@ -710,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
