--- a/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Student.ipynb
+++ b/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Student.ipynb
@@ -614,7 +614,7 @@
     "\n",
     "'''\n",
     "ToDo:\n",
-    "Initialize the Qagent and call the instance Qagent!\n",
+    "Initialize the QAgent and call the instance agent!\n",
     "Afterwardss,let it train over the number of simulations with the specific learning rate!\n",
     "'''\n",
     "\n",
@@ -637,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Qagent.visualize_rewards()"
+    "agent.visualize_rewards()"
    ]
   },
   {
@@ -663,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Qagent.play_game()"
+    "agent.play_game()"
    ]
   },
   {
