--- a/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Final_Solution.ipynb
+++ b/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Final_Solution.ipynb
@@ -608,14 +608,14 @@
     "\n",
     "'''\n",
     "ToDo:\n",
-    "Initialize the Qagent and call the instance Qagent!\n",
+    "Initialize the Qagent and call the instance agent!\n",
     "Afterwards,let it train over the number of simulations with the specific learning rate!\n",
     "'''\n",
     "\n",
     "#WRITE YOUR CODE HERE!\n",
     "#With standard epsilon_greedy\n",
-    "Qagent_standard_greedy = QAgent(env_name)\n",
-    "Qagent_standard_greedy.train(simulations, learning_rate)"
+    "agent_standard_greedy = QAgent(env_name)\n",
+    "agent_standard_greedy.train(simulations, learning_rate)"
    ]
   },
   {
@@ -627,8 +627,8 @@
    "source": [
     "#We can also train the Qagent with a decaying epsilon schedule\n",
     "\n",
-    "Qagent_epsilon_decay = QAgent(env_name)\n",
-    "Qagent_epsilon_decay.train(simulations, learning_rate, adaptive_epsilon=True)"
+    "agent_epsilon_decay = QAgent(env_name)\n",
+    "agent_epsilon_decay.train(simulations, learning_rate, adaptive_epsilon=True)"
    ]
   },
   {
@@ -654,7 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Qagent_standard_greedy.visualize_rewards()"
+    "agent_standard_greedy.visualize_rewards()"
    ]
   },
   {
@@ -672,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Qagent_epsilon_decay.visualize_rewards()"
+    "agent_epsilon_decay.visualize_rewards()"
    ]
   },
   {
@@ -698,7 +698,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Qagent_epsilon_decay.play_game()"
+    "agent_epsilon_decay.play_game()"
    ]
   },
   {
