Updated comments and fixed a tiny error

--- a/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part2-StudentsNew.ipynb
+++ b/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part2-StudentsNew.ipynb
@@ -322,7 +322,7 @@
     "        batch_size = number of transitions that will be sampled\n",
     "        \n",
     "        Returns:\n",
-    "        tensor of observations, actions, rewards, done (boolean) and next observation \n",
+    "        tensor of observations, actions, rewards, dones (boolean) and new_observations \n",
     "        '''\n",
     "        \n",
     "        transitions = random.sample(self.replay_buffer, batch_size)\n",
@@ -1009,8 +1009,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "low = env.observation_space.low\n",
-    "high =env.observation_space.high\n",
+    "low = dagent.env.observation_space.low\n",
+    "high = dagent.env.observation_space.high\n",
     "\n",
     "bin_size = 20\n",
     "bin_x = np.linspace(low[0], high[0], bin_size)\n",
