--- a/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Final_Solution.ipynb
+++ b/TD_learning_DQN/DeepQ_Learning_VU_Summerschool_2022-part1_Final_Solution.ipynb
@@ -5,7 +5,7 @@
    "id": "b9d0e355",
    "metadata": {},
    "source": [
-    "# Reinforcement learning summer school at the VU - 2022 - Solutions"
+    "# Reinforcement learning practical sessions - Solutions"
    ]
   },
   {
