Updated to work with new gym render mode

--- a/distributional_reinforcement_learning/Tutorial_Dist_RL-(Answers_Included)-v2.ipynb
+++ b/distributional_reinforcement_learning/Tutorial_Dist_RL-(Answers_Included)-v2.ipynb
@@ -1887,22 +1887,24 @@
    "source": [
     "# create empty list, to be populated by frames\n",
     "clip = []\n",
+    "eval_env = gym.make('Freeway-ram-v0', render_mode='rgb_array') \n",
     "\n",
     "# reset the game\n",
-    "state = preproc_state(env.reset())\n",
+    "state = preproc_state(eval_env.reset()[0])\n",
     "for i in range(1000):\n",
     "    if i % 100 == 0:\n",
     "        print(f\"Rendering: {(i/1000)*100}% complete...\")\n",
     "    \n",
     "    # make a prediction for a given state\n",
     "    pred = dist_dqn(state,theta,3)\n",
-    "    # get the image\n",
-    "    image = get_dist_plot(env,pred,support,shape=(210,160,3))\n",
     "    #pred = pred.detach.numpy()\n",
     "    # select best action\n",
     "    action = get_action_dqn(pred.unsqueeze(dim=0).detach().numpy(),support).item()\n",
     "    # get state, reward and information\n",
-    "    s,r,d,j = env.step(action)\n",
+    "    s,r,terminated, truncated,j = eval_env.step(action)\n",
+    "    # get the image\n",
+    "    image = get_dist_plot(eval_env,pred,support,shape=(210,160,3), image=s)\n",
+    "    done = terminated or truncated
     "    # preprocess new state\n",
     "    state = preproc_state(s)\n",
     "    # append individual frames\n",
