updated to work with new gym rendering

--- a/distributional_reinforcement_learning/Tutorial_Dist_RL-(Answers_Included)-v2.ipynb
+++ b/distributional_reinforcement_learning/Tutorial_Dist_RL-(Answers_Included)-v2.ipynb
@@ -1904,7 +1904,7 @@
     "    s,r,terminated, truncated,j = eval_env.step(action)\n",
     "    # get the image\n",
     "    image = get_dist_plot(eval_env,pred,support,shape=(210,160,3), image=s)\n",
-    "    done = terminated or truncated
+    "    done = terminated or truncated\n",
     "    # preprocess new state\n",
     "    state = preproc_state(s)\n",
     "    # append individual frames\n",
