Updated the rendering cell.

--- a/distributional_reinforcement_learning/RL-Distributional-Tutorial.ipynb
+++ b/distributional_reinforcement_learning/RL-Distributional-Tutorial.ipynb
@@ -2310,14 +2310,42 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "xC2GUTW_z54u",
-    "outputId": "33188aa3-b376-490d-bfb0-266b6f8afcc5",
-    "slideshow": {
-     "slide_type": "slide"
-    }
+    "id": "xC2GUTW_z54u"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# create empty list, to be populated by frames\n",
+    "clip = []\n",
+    "eval_env = gym.make('Freeway-ram-v0', render_mode='rgb_array') \n",
+    "\n",
+    "# reset the game\n",
+    "state = preproc_state(eval_env.reset()[0])\n",
+    "for i in range(1000):\n",
+    "    if i % 100 == 0:\n",
+    "        print(f\"Rendering: {(i/1000)*100}% complete...\")\n",
+    "    \n",
+    "    # make a prediction for a given state\n",
+    "    pred = dist_dqn(state,theta,3)\n",
+    "    #pred = pred.detach.numpy()\n",
+    "    # select best action\n",
+    "    action = get_action_dqn(pred.unsqueeze(dim=0).detach().numpy(),support).item()\n",
+    "    # get state, reward and information\n",
+    "    s,r,terminated, truncated,j = eval_env.step(action)\n",
+    "    # get the image\n",
+    "    image = get_dist_plot(eval_env,pred,support,shape=(210,160,3), image=s)\n",
+    "    done = terminated or truncated\n",
+    "    # preprocess new state\n",
+    "    state = preproc_state(s)\n",
+    "    # append individual frames\n",
+    "    clip.append(image)\n",
+    "    \n",
+    "print('Rendering complete! Converting to mp4...')\n",
+    "\n",
+    "# write to mp4\n",
+    "imageio.mimwrite('img/AtariHighway-v3.mp4', clip, fps = 20)\n",
+    "\n",
+    "print('Done!')"
+   ]
   },
   {
    "cell_type": "markdown",
